[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/fonts/arial/ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/gene_editor.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 0.505882 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 15

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="ButtonGroup" id=3]

[node name="GeneEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -336, -41 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpeciesControl" type="HBoxContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 50.0
margin_right = 712.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="CenterContainer/SpeciesControl"]
margin_right = 400.0
margin_bottom = 500.0
rect_min_size = Vector2( 400, 500 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="SpeciesSettings" type="VBoxContainer" parent="CenterContainer/SpeciesControl/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 21.0
margin_right = 400.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Gene Editor"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 60.0
margin_right = 400.0
margin_bottom = 343.0
alignment = 1

[node name="Genes" type="VBoxContainer" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer"]
margin_left = 24.0
margin_right = 375.0
margin_bottom = 283.0
custom_constants/separation = 10

[node name="CretureID" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes"]
margin_right = 351.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Instance #"
align = 1
valign = 1

[node name="Genes" type="HBoxContainer" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes"]
margin_top = 34.0
margin_right = 351.0
margin_bottom = 209.0
custom_constants/separation = 10
alignment = 1

[node name="Labels" type="VBoxContainer" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes"]
margin_right = 138.0
margin_bottom = 175.0
custom_constants/separation = 6

[node name="Species" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Labels"]
margin_right = 138.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Species"
valign = 1

[node name="Energy" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Labels"]
margin_top = 30.0
margin_right = 138.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "Energy %"
valign = 1

[node name="Speed" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Labels"]
margin_top = 60.0
margin_right = 138.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Speed Value"
valign = 1

[node name="Vision" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Labels"]
margin_top = 90.0
margin_right = 138.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "Vision Radius"
valign = 1

[node name="Size" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Labels"]
margin_top = 120.0
margin_right = 138.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "Size Value"
valign = 1

[node name="Mutation" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Labels"]
margin_top = 150.0
margin_right = 138.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "Mutation Offset"
valign = 1

[node name="Inputs" type="VBoxContainer" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes"]
margin_left = 148.0
margin_right = 351.0
margin_bottom = 175.0
custom_constants/separation = 5

[node name="Species" type="HBoxContainer" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Inputs"]
margin_right = 203.0
margin_bottom = 30.0
custom_constants/separation = 5

[node name="Species1" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Inputs/Species"]
margin_right = 99.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
pressed = true
group = SubResource( 2 )
text = "Species 1"

[node name="Species2" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Inputs/Species"]
margin_left = 104.0
margin_right = 203.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = SubResource( 2 )
text = "Species 2"

[node name="Energy" type="LineEdit" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Inputs"]
margin_top = 35.0
margin_right = 203.0
margin_bottom = 59.0
rect_min_size = Vector2( 50, 0 )
text = "100"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="Speed" type="LineEdit" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Inputs"]
margin_top = 64.0
margin_right = 203.0
margin_bottom = 88.0
rect_min_size = Vector2( 50, 0 )
text = "1"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="Vision" type="LineEdit" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Inputs"]
margin_top = 93.0
margin_right = 203.0
margin_bottom = 117.0
rect_min_size = Vector2( 50, 0 )
text = "1"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="Size" type="LineEdit" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Inputs"]
margin_top = 122.0
margin_right = 203.0
margin_bottom = 146.0
rect_min_size = Vector2( 50, 0 )
text = "1"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="Mutation" type="LineEdit" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Genes/Inputs"]
margin_top = 151.0
margin_right = 203.0
margin_bottom = 175.0
rect_min_size = Vector2( 50, 0 )
text = "1"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="Diet2" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes"]
margin_top = 219.0
margin_right = 351.0
margin_bottom = 243.0
custom_fonts/font = SubResource( 1 )
text = "Diet"
align = 1
valign = 1

[node name="Diet" type="HBoxContainer" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes"]
margin_top = 253.0
margin_right = 351.0
margin_bottom = 283.0
custom_constants/separation = 20
alignment = 1

[node name="Herb" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Diet"]
margin_left = 8.0
margin_right = 106.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
pressed = true
group = SubResource( 3 )
text = "Herbivore"

[node name="Carn" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Diet"]
margin_left = 126.0
margin_right = 224.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = SubResource( 3 )
text = "Carnivore"

[node name="Omni" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/HBoxContainer/Genes/Diet"]
margin_left = 244.0
margin_right = 343.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = SubResource( 3 )
text = "Omnivore"

[node name="Kill" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 358.0
margin_right = 400.0
margin_bottom = 388.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Kill Creature"
flat = true

[node name="Apply" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 403.0
margin_right = 400.0
margin_bottom = 433.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Apply Changes"
flat = true

[node name="Back" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 448.0
margin_right = 400.0
margin_bottom = 478.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cancel"
flat = true

[connection signal="pressed" from="CenterContainer/SpeciesControl/Panel/SpeciesSettings/Kill" to="." method="_on_Kill_pressed"]
[connection signal="pressed" from="CenterContainer/SpeciesControl/Panel/SpeciesSettings/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="CenterContainer/SpeciesControl/Panel/SpeciesSettings/Back" to="." method="_on_Back_pressed"]
